[package]
name = "kore-http"
version = "0.5.0"
edition = "2024"

[dependencies]
kore-bridge = { path = "../kore/kore-bridge" }

tokio = { version = "1.43.0", features = ["full"] }
config = { version = "0.15.8", features = ["json", "toml", "yaml"]}
serde_json = {version = "1.0.133"}
serde = {version = "1.0.215"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

rustls = { version = "0.23.23", features = ["ring"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum = { version = "0.8.1" }
axum-extra = "0.10.0"
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace", "metrics", "cors"]}
utoipa = { version = "5.3.1", features = ["axum_extras"]}
utoipa-rapidoc = { version = "6.0.0", features = ["axum"]}
zip = "2.2.2"
bytes = "1.10.0"
[features]
default = []